test/corpus/structural-directives.txt
====
NgIf
====

<span *ngIf="someCondition">{{ value }}</span>
<span *ngIf="someCondition && otherCondition">{{ value }}</span>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (expression
              (identifier))))))
    (interpolation
      (expression
        (identifier)))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (conditional_expression
              (identifier)
              (conditional_operator)
              (identifier))))))
    (interpolation
      (expression
        (identifier)))
    (end_tag
      (tag_name))))

=========
NgIf else
=========

<span *ngIf="someCondition; else elseBlock">{{ value }}</span>
<span #elseBlock>{{ value }}</span>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (expression
              (identifier))
            (special_keyword)
            (identifier)))))
    (interpolation
      (expression
        (identifier)))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)))
    (interpolation
      (expression
        (identifier)))
    (end_tag
      (tag_name))))

===============
NgIf with alias
===============

<span *ngIf="{
    isAuthenticated: isAuthenticated$ | async
  } as data">
  {{ data.isAuthenticated }}
</span>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (expression
              (object
                (pair
                  (identifier)
                  (expression
                    (identifier)
                    (pipe_sequence
                      (pipe_operator)
                      (pipe_call
                        (identifier)))))))
            (special_keyword)
            (identifier)))))
    (interpolation
      (expression
        (member_expression
          (identifier)
          (identifier))))
    (end_tag
      (tag_name))))

======================
NgIf binary expression
======================

<span *ngIf="a > b"></span>
<span *ngIf="a == b"></span>
<span *ngIf="a === b"></span>
<span *ngIf="a != b"></span>
<span *ngIf="a !== b"></span>
<span *ngIf="a && b"></span>
<span *ngIf="a || b"></span>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (binary_expression
              left: (expression
                (identifier))
              right: (identifier))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (binary_expression
              left: (expression
                (identifier))
              right: (identifier))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (binary_expression
              left: (expression
                (identifier))
              right: (identifier))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (binary_expression
              left: (expression
                (identifier))
              right: (identifier))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (binary_expression
              left: (expression
                (identifier))
              right: (identifier))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (conditional_expression
              left: (identifier)
              (conditional_operator)
              right: (identifier))))))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (conditional_expression
              left: (identifier)
              (conditional_operator)
              right: (identifier))))))
    (end_tag
      (tag_name))))

=====
NgFor
=====

<span *ngFor="let item of items">{{ item }}</span>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_declaration
            (special_keyword)
            (structural_assignment
              (identifier)
              (identifier)
              (expression
                (identifier)))))))
    (interpolation
      (expression
        (identifier)))
    (end_tag
      (tag_name))))

================
NgFor with alias
================

<li *ngFor="let person of people; let i = index; let isEven = even; let isOdd = odd; trackBy: trackByPersonId">
</li>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_declaration
            (special_keyword)
            (structural_assignment
              (identifier)
              (identifier)
              (expression
                (identifier)))
            (structural_assignment
              (special_keyword)
              (identifier)
              (expression
                (identifier)))
            (structural_assignment
              (special_keyword)
              (identifier)
              (expression
                (identifier)))
            (structural_assignment
              (special_keyword)
              (identifier)
              (expression
                (identifier)))
            (structural_assignment
              (identifier)
              (identifier))))))
    (end_tag
      (tag_name))))

========
NgSwitch
========

<div [ngSwitch]="currentItem.feature">
  <span *ngSwitchCase="'stout'"></span>
  <span *ngSwitchDefault></span>
</div>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (identifier))
          (expression
            (member_expression
              (identifier)
              (identifier))))))
    (element
      (start_tag
        (tag_name)
        (attribute
          (structural_directive
            (identifier)
            (structural_expression
              (expression
                (string))))))
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name)
        (attribute
          (structural_directive
            (identifier))))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

=======================
Template Outlet context
=======================

<ng-container
  *ngTemplateOutlet="
    tab.url === undefined || tab.url === null ? tabTemplate : navigableTabTemplate;
    context: { $implicit: tab, index: index }
  "
>
</ng-container>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (ternary_expression
              condition: (conditional_expression
                left: (binary_expression
                  left: (expression
                    (member_expression
                      object: (identifier)
                      property: (identifier)))
                  right: (identifier))
                (conditional_operator)
                right: (binary_expression
                  left: (expression
                    (member_expression
                      object: (identifier)
                      property: (identifier)))
                  right: (identifier)))
              (ternary_operator)
              consequence: (identifier)
              (ternary_operator)
              alternative: (expression
                (identifier)))
            (special_keyword)
            (expression
              (object
                (pair
                  key: (identifier)
                  value: (expression
                    (identifier)))
                (pair
                  key: (identifier)
                  value: (expression
                    (identifier)))))))))
    (end_tag
      (tag_name))))

=========================
Directive with parameters
=========================

<span *appMyDirective="person.name; query: service.query() ?? ''"></span>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (expression
              (member_expression
                (identifier)
                (identifier)))
            (identifier)
            (nullish_coalescing_expression
              (expression
                (member_expression
                  (identifier)
                  (call_expression
                    (identifier))))
              (coalescing_operator)
              (string))))))
    (end_tag
      (tag_name))))

===============================
Multi-line structural directive
===============================

<div
  *ngIf="
    Obj[SomeEnum.X] +
    Obj[SomeEnum['xx']] +
    Obj[2]
  "
>

</div>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (structural_directive
          (identifier)
          (structural_expression
            (binary_expression
              (binary_expression
                (expression
                  (bracket_expression
                    (identifier)
                    (member_expression
                      (identifier)
                      (identifier))))
                (bracket_expression
                  (identifier)
                  (bracket_expression
                    (identifier)
                    (static_member_expression
                      (identifier)))))
              (bracket_expression
                (identifier)
                (identifier)))))))
    (end_tag
      (tag_name))))
